--- a/space.html
+++ b/space.html
@@ -3,6 +3,8 @@
 </head>
 
 <body>
-    <script src = "space2.js"> </script>    
+    <script src = "space2.js"> </script>
+    <script src = "stars.js"> </script> 
+    <script src = "ship.js"> </script> 
     
 </body>
